src/ui/snapshots/ktype__ui__tests__duration_15s.snap
---
source: src/ui/mod.rs
expression: render_with_duration(0)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  @ punctuation  # numbers   [time] words   [15]  30  60  custom   [←→] cyc
                                                                                
                                                                                
the quick brown                                                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                   [esc] quit
