src/ui/snapshots/ktype__ui__tests__duration_30s.snap
---
source: src/ui/mod.rs
expression: render_with_duration(1)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  @ punctuation  # numbers   [time] words   15  [30]  60  custom   [←→] cyc
                                                                                
                                                                                
the quick brown                                                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                   [esc] quit
