src/ui/snapshots/ktype__ui__tests__idle_wide_terminal.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                   ktype  @ punctuation  # numbers   [time] words   [15]  30  60  custom   [←→] cycle  [tab] restart  [shift+tab] → word mode                   
                                                                                                                                                                
                                                                                                                                                                
                                        the quick brown fox                                                                                                     
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                           [esc] quit
