src/ui/snapshots/ktype__ui__tests__modal_time.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
             ╭────────────────────────────────────────────────────╮             
ktype  @ punc│                    Test Duration                   │om   [←→] cyc
             │                1 hour and 30 minutes               │             
             │╭──────────────────────────────────────────────────╮│             
the quick bro││1h30m_                                            ││             
             │╰──────────────────────────────────────────────────╯│             
             │use h for hours, m for minutes (e.g. 1h30m). 0 = inf│             
             │            [enter] apply   [esc] cancel            │             
             │                                                    │             
             ╰────────────────────────────────────────────────────╯
