src/ui/snapshots/ktype__ui__tests__modal_words.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  @ punc╭────────────────────────────────────────────────────╮om   [←→] cyc
             │                 Custom word amount                 │             
             │                      42 words                      │             
the quick bro│╭──────────────────────────────────────────────────╮│             
             ││42_                                               ││             
             │╰──────────────────────────────────────────────────╯│             
             │            [enter] apply   [esc] cancel            │             
             ╰────────────────────────────────────────────────────╯             
                                   [esc] quit
