src/ui/snapshots/ktype__ui__tests__numbers_on_header.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  @ punctuation  [# numbers]   [time] words   [15]  30  60  custom   [←→] c
                                                                                
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
                                                                                
                                   [esc] quit
