src/ui/snapshots/ktype__ui__tests__results_punctuation_numbers_label.snap
---
source: src/ui/mod.rs
expression: output
---
                                                               [time] words   [15]  30  60  custom                                                              
                                                                                                                                                                
                    wpm                                                             no data                                                                     
                    24                                                                                                                                          
                                                                                                                                                                
                    acc                                                                                                                                         
                    100%                                                                                                                                        
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                    test type                       raw                          consistency                   time                                             
                    time 15                         24                           0%                            5s                                               
                    english + punctuation + numbers                                                                                                             
                                                                [tab] change/restart   [esc] quit
