src/ui/snapshots/ktype__ui__tests__results_screen_snapshot.snap
---
source: src/ui/mod.rs
expression: output
---
                       [time] words   [15]  30  60  custom                      
                                                                                
wpm                                         no data                             
12                                                                              
                                                                                
acc                                                                             
0%                                                                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
test type                       raw             consistency     time            
time 15                         18              0%              10s             
english                                                                         
                        [tab] change/restart   [esc] quit
