src/ui/snapshots/ktype__ui__tests__results_screen_with_chart_snapshot.snap
---
source: src/ui/mod.rs
expression: output
---
                       [time] words   [15]  30  60  custom                      
                                                                                
wpm             26                                                              
24                                         ×         ⢀⡠⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤
                                                ⢀⣀⠤⠒⠊⠁                          
acc                                         ⣀⠤⠔⠊⠁                               
90%             20                        ⢠⠋                                    
                                         ⢠⠃                                     
                                        ⢠⠃                                      
                                       ⢠⠃                                       
                13                    ⢀⠇                                        
                                     ⢀⠎                                         
                                    ⢀⠎                                          
                                   ⢀⠎                                           
                 7                 ⡎                                            
                                  ⡜                                             
                                 ⡜                                              
                                ⡜                                               
                 0 ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡜                                                
                               1           2           3           4           5
test type                       raw             consistency     time            
time 15                         24              86%             5s              
english                                                                         
                        [tab] change/restart   [esc] quit
